traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:11: error: type mismatch;
 found   : Unit
 required: Boolean
  if (p = 1) {
        ^